fix spacing for breadcrambs and set display inline into rent-info

--- a/estate-complexes-redesign/css/annonce-page-daily.scss
+++ b/estate-complexes-redesign/css/annonce-page-daily.scss
@@ -363,10 +363,7 @@
     margin-bottom: 0;
   }
   .bordered-row-value {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 4px;
+    display: inline;
     text-align: right;
     font-size: 14px;
     font-weight: 700;
