--- a/estate-complexes-redesign/css/app.css
+++ b/estate-complexes-redesign/css/app.css
@@ -1170,7 +1170,7 @@ a.dropdown-toggle:visited {
 }
 
 .breadcrumb-filter {
-  margin-top: 20px;
+  margin-top: 0 !important;
   margin-bottom: 20px;
   padding: 0;
 }
@@ -8480,10 +8480,7 @@ footer {
   margin-bottom: 0;
 }
 .bordered-row .bordered-row-value {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 4px;
+  display: inline;
   text-align: right;
   font-size: 14px;
   font-weight: 700;
