--- a/estate-complexes-redesign/css/global.scss
+++ b/estate-complexes-redesign/css/global.scss
@@ -1180,7 +1180,7 @@ a.dropdown-toggle:visited {
 }
 
 .breadcrumb-filter {
-  margin-top: 20px;
+  margin-top: 0 !important;
   margin-bottom: 20px;
   padding: 0;
 
